--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-example",
+  "name": "almond-choco",
   "version": "0.0.1",
   "dependencies": {
     "express": "2.5.x"
   },
   "engines": {
-    "node": "0.6.x"
+    "node": "0.8.x"
   }
 }
