--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "almond-choco",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.5.x"
+    "express": "2.5.x",
+    "ejs": "0.7.x"
   },
   "engines": {
     "node": "0.6.x"
