--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "express": "2.5.x",
     "ejs": "0.7.x"
+    "mongoose": "2.7.x"
   },
   "engines": {
     "node": "0.6.x"
