--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "2.5.x",
-    "ejs": "0.7.x"
-    "mongoose": "2.7.x"
+    "ejs": "0.7.x",
+    "mongoose": "2.7.x",
   },
   "engines": {
-    "node": "0.6.x"
+    "node": "0.6.x",
   }
 }
