--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "express": "2.5.x",
     "ejs": "0.7.x",
-    "mongoose": "2.7.x",
+    "mongoose": "2.7.x"
   },
   "engines": {
-    "node": "0.6.x",
+    "node": "0.6.x"
   }
 }
