--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "almond-choco",
-  "version": "0.0.1",
-  "dependencies": {
-    "coffee-script": "1.3.x",
-    "express": "2.5.x",
-    "ejs": "0.7.x",
-    "mongoose": "2.7.x"
-  },
-  "engines": {
-    "node": "0.6.x"
-  }
+    "name": "almond-choco"
+  , "version": "0.0.1"
+  , "dependencies": {
+        "coffee-script": "1.3.x"
+      , "express": "2.5.x"
+      , "ejs": "0.7.x"
+      , "underscore": "1.3.x"
+      , "mongoose": "2.7.x"
+    }
+  , "devDependencies": {
+      "mocha": "*"
+      ,"should": "*"
+      ,"sinon": "*"
+    }
+  , "scripts": {
+        "test": "mocha --compilers coffee:coffee-script"
+    }
+  , "engines": {
+        "node": "0.8.x"
+    }
 }
