--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       , "ejs": "0.7.x"
       , "mongoose": "2.7.x"
       , "underscore": "1.3.x"
+      , "underscore.string": "2.3.x"
     }
   , "devDependencies": {
         "mocha": "*"
