--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       , "mongoose": "2.7.x"
       , "underscore": "1.3.x"
       , "underscore.string": "2.3.x"
+      , "JQDeferred": "1.8.x"
     }
   , "devDependencies": {
         "mocha": "*"
