--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "coffee-script": "1.3.x"
       , "express": "2.5.x"
       , "ejs": "0.7.x"
-      , "mongoose": "2.7.x"
+      , "mongoose": "3.x.x"
       , "underscore": "1.3.x"
       , "underscore.string": "2.3.x"
       , "JQDeferred": "1.8.x"
@@ -20,6 +20,6 @@
     }
   , "engines": {
         "node": "0.8.x"
-      , "npm": "1.1.x"
+      , "npm": "1.x.x"
     }
 }
