--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       , "sinon": "*"
     }
   , "scripts": {
-        "test": "mocha --compilers coffee:coffee-script -t 10000"
+        "test": "mocha -t 10000"
     }
   , "engines": {
         "node": "0.8.x"
