--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
     "name": "almond-choco"
   , "version": "0.0.1"
   , "dependencies": {
-        "coffee-script": "1.3.x"
-      , "express": "2.5.x"
+        "express": "2.5.x"
       , "ejs": "0.7.x"
       , "mongoose": "3.x.x"
       , "underscore": "1.3.x"
@@ -16,7 +15,7 @@
       , "sinon": "*"
     }
   , "scripts": {
-        "test": "mocha -t 10000"
+        "test": "make clean all && mocha -t 10000"
     }
   , "engines": {
         "node": "0.8.x"
