--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "almond-choco"
   , "version": "0.0.1"
   , "dependencies": {
-        "express": "2.5.x"
+        "express": "2.x.x"
       , "ejs": "0.7.x"
       , "mongoose": "3.x.x"
       , "underscore": "1.3.x"
